# python-ripping-app

./: .gitignore  README.md  agents.md  cdrip.spec  cdrip_gui.spec  pyproject.toml
docs/: building-executables.md
scripts/: build_exe.py  cdrip_entry.py  cdrip_gui_entry.py
src/: __init__.py  __main__.py  accuraterip.py  audio_edit.py  bitrates.py  cd.py  cli.py  config.py  encode.py  gui.py  metadata.py  metadata_types.py  templates.py
tests/: __init__.py  conftest.py  test_accuraterip.py  test_audio_edit.py  test_bitrates.py  test_cd.py  test_cli.py  test_config.py  test_encode.py  test_metadata.py  test_templates.py
