[project]
name = "cd-ripper"
version = "0.1.0"
description = "CLI to rip audio from CD to multiple formats with metadata and AccurateRip verification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cdrip = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.workspace]
members = [
    "python-audio-tools",
]
